# FireSimulation

./: CMakeLists.txt
header/: Burning.h  Cell.h  Empty.h  Grid.h  Simulation.h  State.h  Tree.h
source/: Burning.cpp  Cell.cpp  Empty.cpp  Grid.cpp  Simulation.cpp  State.cpp  Tree.cpp  main.cpp
